--- a/BubbleNoisy/pom.xml
+++ b/BubbleNoisy/pom.xml
@@ -3,11 +3,29 @@
   <groupId>com.bubble.beetles</groupId>
   <artifactId>BubbleNoisy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.4.3.RELEASE</version>
+  </parent>
+
   <dependencies>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
         <version>4.3.5.RELEASE</version>
+    </dependency>
+    
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-batch</artifactId>
+	</dependency>
+    
+    <dependency>
+        <groupId>org.springframework.batch</groupId>
+        <artifactId>spring-batch-core</artifactId>
+        <version>3.0.7.RELEASE</version>
     </dependency>
 </dependencies>
 </project>
